gitops/platform-apps/searxng/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng
  namespace: searxng
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`searxng.__ZONE_NAME__`)
      services:
        - kind: Service
          name: searxng
          port: 80
  tls: {}
